2003-03-24  Jorn Baayen  <jorn@nl.linux.org>

	* gtk/Gtk.metadata : mark null_ok param on Window.SetTransientFor.

2003-03-24  Jorn Baayen  <jorn@nl.linux.org>

	* gdk/Gdk.metadata : mark out param on Screen.GetMonitorGeometry.

2004-03-22  Mike Kestner  <mkestner@ximian.com>

	* gtk/Window.custom : bring back the DefaultSize prop as a
	Gdk.Size.

2004-03-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: if no C# compiler found, error out.

2004-03-18  Mike Kestner  <mkestner@ximian.com>

	* gdk/Makefile.am : generate glue
	* gdk/glue/Makefile.am : build generated glue
	* gdk/glue/makefile.win32 : build generated glue
	* gdk/glue/vmglueheaders.h : includes for vm glue
	* gtk/Makefile.am : generate glue
	* gtk/glue/Makefile.am : build generated glue
	* gtk/glue/makefile.win32 : build generated glue
	* gtk/glue/vmglueheaders.h : includes for vm glue

2004-03-18  Mike Kestner  <mkestner@ximian.com>

	* configure.in : expand atk/glue/Makefile
	* atk/Makefile.am : generate glue and build glue dir
	* atk/makefile.win32 : ditto
	* atk/glue/Makefile.am : build new glue
	* atk/glue/makefile.win32 : build new glue
	* atk/glue/vmglueheaders.h : new includes for vm glue
	* atk/glue/win32dll.c : win dll building code
	* generator/CodeGenerator.cs : add --gluelib-name and 
	--glue-filename argument parsing.
	* generator/GenerationInfo.cs : add GluelibName, GlueFilename,
	GlueEnabled, GlueWriter, and CloseGlueWriter.
	* generator/ObjectGen.cs : Add VirtualMethod glue generation
	* generator/Statistics.cs : Add warning message for virtual
	method throttling.
	
2004-03-18  Mike Kestner  <mkestner@ximian.com>

	* parser/gapi2xml.pl : fix passbyvalue bug in vm parsing.
	* */*.raw : regen

2004-03-17  Mike Kestner  <mkestner@ximian.com>

	* sample/rsvg/Makefile.am : make conditional on ENABLE_RSVG

2004-03-16  Mike Kestner  <mkestner@ximian.com>

	* generator/Signal.cs : streamline the remove code a tad.

2004-03-16  Mike Kestner  <mkestner@ximian.com>
