@@ -1,3 +1,8 @@
+2003-03-24  John Luke  <jluke@cfl.rr.com>
+
+	* samples/gconf/Makefile.am:
+	changes SOURCES to FILES to make automake 1.8 happy
+
 2003-03-24  Jorn Baayen  <jorn@nl.linux.org>
 
 	* gtk/Gtk.metadata : mark null_ok param on Window.SetTransientFor.
